<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">IEEE MSIT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_title">Welcome to IEEE MSIT!</string>
    <string name="about_ieee_title">About IEEE</string>
    <string name="about_ieee_msit_title">About IEEE MSIT</string>
    <string name="executive_committee_title">Executive Committee</string>
    <string name="branch_advisors_title">Branch Advisors</string>
    <string name="upcoming_events_title">Upcoming Events</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="android_team_title">Android Team</string>
    <string name="about_ieee_text">The Institute of Electrical and Electronics Engineers (IEEE, read I-Triple-E) is a professional association headquartered in New York City that is dedicated to advancing technological innovation and excellence. It has about 425,000 members in about 160 countries, slightly less than half of whom reside in the United States. IEEE is the world\’s largest professional association dedicated to advancing technological innovation and excellence for the benefit of humanity. IEEE and its members inspire a global community through its highly cited publications, conferences, technology standards, and professional and educational activities. IEEE\'s membership has long been composed of engineers, scientists, and allied professionals. These include computer scientists, software developers, information technology professionals, physicists, medical doctors, and many others. It is an association designed to serve professionals involved in all aspects of the electrical, electronic and computing fields and related areas of science and technology that underlie modern civilization.</string>
    <string name="about_ieee_quick_facts_heading_text">IEEE Quick Facts:</string>
    <string name="about_ieee_quick_facts_text">IEEE has:\n\n
        • More than 425,000 members in more than 160 countries, more than 50 percent of whom are from outside the
        United States\n
        • More than 116,000 Student members\n
        • 333 Sections in 10 geographic regions worldwide\n
        • 2,195 Chapters that unite local members with similar technical interests\n
        • 2,354 student branches at colleges and universities\n
        • 800 student branch chapters of IEEE technical societies</string>
    <string name="about_ieee_last_para_text">At the pre-college level, the IEEE works with industry, universities and government to raise students\’ literacy in science, maths, engineering and technology. IEEE journals are consistently among the most highly cited in electrical and electronics engineering, telecommunications and other technical fields. IEEE is a leading developer of international standards that underpin many of today\'s telecommunications, information technology and power generation products and services. IEEE also produces technical books, monographs, guides and textbooks.</string>
    <string name="para1_about_ieee_msit">It was the onset of the year 2009. IEEE, USA was celebrating its 125th anniversary. Thousands of miles away, a new student branch was being formed with a mere strength of around 30 members. Without any guidance or previous experience, the Branch Counselor and her ExeCom were struggling hard to give this student branch an orientation and structure. After one year, the student branch was termed as the fastest upcoming branches in the entire Delhi Section, while the branch counselor received the rare honour of \“Best Branch Counselor of an Upcoming Branch\” at the Annual General Meeting of IEEE, Delhi Section. Yes, the branch is none other than our own college, i.e. Maharaja Surajmal Institute Of Technology.</string>
    <string name="para2_about_ieee_msit">The student branch of MSIT was registered with IEEE, USA in March, 2009 and it marked the beginning of the journey of IEEE, MSIT onto the path of constant upgradations and developments. The reins of this newly formed branch were given in the capable hands of Ms. Suman Mann, Reader, IT Department and she assumed the responsibility of Branch Counselor, IEEE, MSIT.</string>
    <string name="para3_about_ieee_msit">Many seminars and workshops were organized by the IEEE Student Branch in its
        endeavor. These included a workshop by Mr. Ankit Mittal on Basic Robotics and Autonomous Robots, which was held
        in collaboration with IEEE, Delhi Section. Similarly, a 2-day workshop on Wireless/Autonomous Robotics, I-MANIA, was organized at the campus in collaboration with OSUM-MSIT. Both the events were a huge success. By the year end, an IEEE awareness seminar was held with guest speakers from IEEE, DTU (formerly DCE). It helped create awareness among the students about the benefits of joining IEEE and helped in the rise in number of memberships in the present academic year.</string>
    <string name="para4_about_ieee_msit">IEEE-MSIT is gradually becoming a name which engineers of various institutes have started to recognize. As Robert Frost once said… \“Miles to go before I sleep, Miles to go before I sleep.\”</string>
    <string name="name1">Chairperson: Ayush Girdhar</string>
    <string name="link11">ayush.g.girdhar@ieee.org</string>
    <string name="name2">Vice-Chairperson: Nakul Singh Adhikari</string>
    <string name="link21">nakuladhikari.in.96@ieee.org</string>
    <string name="name3">Vice-Chairperson: Sarthak Agarwal</string>
    <string name="name4">General Secretary: Rashika Mann</string>
    <string name="name5">Treasurer: Rishabh Jain</string>
    <string name="name6">Industrial Relations: Aashish Kapoor</string>
    <string name="name7">Public Relations: Ayush Makkar</string>
    <string name="name8">Public Relations: Shivam Sehgal</string>
    <string name="name9">Public Relations: Kshitij Tomar</string>
    <string name="teacher1">Mr. Sitender\n\nBranch Counselor, IEEE MSIT</string>
    <string name="teacher2">Ms. Savita Ahlawat\n\nChapter Advisor, IEEE CS MSIT</string>
    <string name="teacher3">Mr. Parveen Kumar\n\nChapter Advisor, IEEE MTT-S MSIT</string>
    <string name="teacher4">Ms. Jyoti Jain\n\nChapter Advisor, IEEE PES MSIT</string>
    <string name="contact_us_heading">Get in touch with us</string>
    <string name="r1c1">IEEE MSIT Student Branch</string>
    <string name="r1c2">ieee@msit.in</string>
    <string name="r2c1">IEEE CS MSIT SBC</string>
    <string name="r2c2">ieeecs@msit.in</string>
    <string name="r3c1">IEEE MTT-S MSIT SBC</string>
    <string name="r3c2">ieeemtts@msit.in</string>
    <string name="r4c1">IEEE PES MSIT SBC</string>
    <string name="r4c2">ieeepes@msit.in</string>
    <string name="r5c1">IEEE WIE MSIT SBC</string>
    <string name="r5c2">ieeewie@msit.in</string>
    <string name="aname1">Shivam Rastogi</string>
    <string name="aname2">Akanksha Jolly</string>
    <string name="q1">What is IEEE <xliff:g id="society_name">%s</xliff:g>?</string>
    <string name="q2">What is IEEE MSIT <xliff:g id="society_name">%s</xliff:g>?</string>
    <string name="q3">Benefits of joining IEEE MSIT <xliff:g id="society_name">%s</xliff:g></string>
    <string name="q4">Present Execom</string>
    <string name="q5">Past Events</string>
    <string name="q6">Future Events</string>
    <string name="q7">Personal Achievements</string>
    <string name="q8"><xliff:g id="society_name">%s</xliff:g> MSIT Achievements</string>
    <string name="h1cs">IEEE MSIT CS</string>
</resources>