<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    tools:context="in.msit.ieee.fragments.BranchAdvisorsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            style="@style/PageHeadingTextStyle"
            android:text="@string/branch_advisors_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:orientation="vertical">

                    <in.msit.ieee.DynamicHeightImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sitender"/>

                    <TextView
                        style="@style/ParagraphTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:paddingEnd="@dimen/margin_small"
                        android:paddingStart="@dimen/margin_small"
                        android:text="@string/teacher1"/>

                    <ImageView
                        android:layout_width="26dp"
                        android:id="@+id/gmail1"
                        android:layout_height="26dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/gmail_icon"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <in.msit.ieee.DynamicHeightImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/parveen_kumar"/>

                    <TextView
                        style="@style/ParagraphTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:paddingEnd="@dimen/margin_small"
                        android:paddingStart="@dimen/margin_small"
                        android:text="@string/teacher3"/>

                    <ImageView
                        android:layout_width="26dp"
                        android:id="@+id/gmail2"
                        android:layout_height="26dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/gmail_icon"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <in.msit.ieee.DynamicHeightImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/savita_ahlawat"/>

                    <TextView
                        style="@style/ParagraphTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:paddingEnd="@dimen/margin_small"
                        android:paddingStart="@dimen/margin_small"
                        android:text="@string/teacher2"/>

                    <ImageView
                        android:layout_width="26dp"
                        android:id="@+id/gmail3"
                        android:layout_height="26dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/gmail_icon"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <in.msit.ieee.DynamicHeightImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/jyoti_jain"/>

                    <TextView
                        style="@style/ParagraphTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:paddingEnd="@dimen/margin_small"
                        android:paddingStart="@dimen/margin_small"
                        android:text="@string/teacher4"/>

                    <ImageView
                        android:layout_width="26dp"
                        android:id="@+id/gmail4"
                        android:layout_height="26dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/gmail_icon"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>