<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    tools:context="in.msit.ieee.fragments.AndroidTeamFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            style="@style/PageHeadingTextStyle"
            android:text="@string/android_team_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <in.msit.ieee.DynamicHeightImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/shivam_rastogi"/>

                    <TextView
                        style="@style/ParagraphTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:paddingEnd="@dimen/margin_small"
                        android:paddingStart="@dimen/margin_small"
                        android:text="@string/aname1"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingEnd="@dimen/margin_small"
                        android:paddingStart="@dimen/margin_small">

                        <ImageView
                            android:id="@+id/gmail1"
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:src="@drawable/gmail_icon"/>

                        <ImageView
                            android:id="@+id/fb1"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:src="@drawable/fb_icon"/>

                        <ImageView
                            android:id="@+id/in1"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/linkedin_icon"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <in.msit.ieee.DynamicHeightImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:scaleType="centerCrop"
                        android:src="@drawable/akanksha_jolly"/>

                    <TextView
                        style="@style/ParagraphTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:paddingEnd="@dimen/margin_small"
                        android:paddingStart="@dimen/margin_small"
                        android:text="@string/aname2"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingEnd="@dimen/margin_small"
                        android:paddingStart="@dimen/margin_small">

                        <ImageView
                            android:id="@+id/gmail2"
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:src="@drawable/gmail_icon"/>

                        <ImageView
                            android:id="@+id/fb2"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:src="@drawable/fb_icon"/>

                        <ImageView
                            android:id="@+id/in2"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/linkedin_icon"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>